# addressee

./: .gitignore  README.md  check_sys_dependencies.sh  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: index.md
scripts/: convert.py  infer.py  run.sh  run_inference.sh
src/addressee/: dataloaders.py
src/addressee/models/: modeling_hubert.py  utils.py
src/addressee/utils/: config.py  utils.py
