[project]
name = "addressee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # VTC
    "pyannote-audio>=3.4.0",
    "segma",
    "tqdm>=4.67.1",
    "polars[rtcompat]>=1.0.0",
    # Addresse inference
    "huggingface-hub>=1.9.1",
    "lightning>=2.6.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch==2.10",
    "torchcodec==0.10",
    "soundfile>=0.13.1",
    "wandb>=0.23.1",
    "torchaudio==2.10.0",
]

[tool.uv.sources]
segma = { git = "https://github.com/arxaqapi/segma", rev="9c398231011a7b16b76cf7be8e99c8b4dbc7ac35"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/addressee"]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
