[project]
name = "addressee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # VTC
    "pyannote-audio>=3.4.0",
    "segma",
    "tqdm>=4.67.1",
    "polars[rtcompat]>=1.0.0",
    # Addresse inference
    "huggingface-hub>=1.9.1",
    "lightning>=2.6.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch==2.11",
    "torchcodec>=0.14",
    "soundfile>=0.13.1",
    "wandb>=0.23.1",
    "torchaudio==2.11",
]

[tool.uv.sources]
segma = { git = "https://github.com/MarvinLvn/segma", rev = "e6cebc5b232ac1a30554caa7ec35dd22057d07f0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/addressee"]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
doc = [
    "zensical>=0.0.24",
]

[project.urls]
documentation = "https://laac-lscp.github.io/BabyHuBERT/"

